# Kabot

./: .env.example  .gitignore  README.md  pyproject.toml  run_server_backtest.py
config/: default.toml  god.toml  new_profile.toml
docs/: execution_engine_path.md
scripts/: analyze_early_exit_vs_settlement.py  backtest_god_live_db.py  backtest_k12_se_reentry.py  backtest_previous_market_context.py  export_kxbtcd_30d_in_10d_chunks.ps1  export_live_bankroll_csv.py  growth_projection.py  monthly_compound.py  set_live_profile.py  summarize_execution_trace.py  time_of_day_analysis.py  watch_kabot.py
sql/: 001_init.sql
src/kabot/: __init__.py  cli.py  compat.py  settings.py  types.py
src/kabot/backtest/: engine.py  metrics.py
src/kabot/markets/: __init__.py  normalize.py
src/kabot/models/: __init__.py  base.py  gbm_threshold.py  latency_repricing.py
src/kabot/reports/: evaluation.py  robustness.py  summary.py
src/kabot/signals/: engine.py
src/kabot/storage/: postgres.py
src/kabot/trading/: __init__.py  daily_strategies.py  daily_vol.py  execution_state.py  execution_trace.py  exits.py  live_trader.py  new_strategies.py  positions.py  velocity.py  ws_feeds.py
tests/: test_backtest.py  test_cli.py  test_daily_profile.py  test_evaluation.py  test_exit_rules.py  test_gbm_threshold.py  test_kalshi_history.py  test_live_trader.py  test_new_profile.py  test_normalize.py  test_prices.py  test_robustness.py  test_signal_engine.py  test_smoke.py  test_summary.py
